<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    android:orientation="vertical"
    tools:context=".AddTravel">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="ScrollViewCount">
        <LinearLayout
            android:orientation="vertical"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/newTravel"
                android:textStyle="italic|bold"
                android:textSize="35sp"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/tvOrigin"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:text="@string/originTravel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <EditText
                android:id="@+id/etOrigin"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:inputType="text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/tvDestiny"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:text="@string/destinyTravel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <EditText
                android:id="@+id/etDestiny"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:inputType="text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/tvTravelType"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:text="@string/travelType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <Spinner
                android:id="@+id/spTravelType"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/tvTransport"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:text="@string/transportTravel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <Spinner
                android:id="@+id/spTransport"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/tvBeginDay"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:text="@string/beginDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <DatePicker
                android:id="@+id/dpBeginDay"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/tvFinalDay"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:text="@string/finalDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <DatePicker
                android:id="@+id/dpFinalDay"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/tvCoin"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:visibility="invisible"
                android:text="@string/coinTravel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <Spinner
                android:id="@+id/spCoin"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:visibility="invisible"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <Button
                android:id="@+id/btnSave"
                android:textSize="20sp"
                android:text="@string/btnSave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>
    </ScrollView>
</LinearLayout>