<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    android:orientation="vertical"
    tools:context=".MainActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:gravity="center"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:src="@drawable/travel"
                android:layout_width="300dp"
                android:layout_height="200dp"/>
            <Button
                android:id="@+id/btnAddTravel"
                android:text="@string/addTravel"
                android:padding="40dp"
                android:textSize="30sp"
                android:layout_width="300dp"
                android:layout_height="wrap_content"/>
            <Button
                android:id="@+id/btnListTravels"
                android:text="@string/list"
                android:padding="40dp"
                android:textSize="30sp"
                android:layout_width="300dp"
                android:layout_height="wrap_content"/>
            <Button
                android:id="@+id/btnSearchTickets"
                android:text="@string/search"
                android:padding="40dp"
                android:textSize="30sp"
                android:layout_width="300dp"
                android:layout_height="wrap_content"/>
            <Button
                android:id="@+id/btnVideo"
                android:text="@string/rate"
                android:padding="40dp"
                android:textSize="30sp"
                android:layout_width="300dp"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>